@@ -93,6 +93,11 @@ else
   HELP2MAN=:
 fi
 
+dnl The following Automake conditional is used in some Makefile.am files
+dnl in order to avoid actions that wouln't work while cross compiling.
+
+AM_CONDITIONAL([NATIVE_BUILD], [test "x$cross_compiling" = "xno"])
+
 dnl recfix is part of the GNU recutils suite, and is used in cfg.mk to
 dnl implement a syntax-check for etc/poke.rec.  If recfix is not
 dnl present we set RECFIX to : so the rule wont fail.
