@@ -30,11 +30,24 @@ pvm-insns.texi: $(top_srcdir)/libpoke/pvm.jitter $(srcdir)/gen-pvm-insns.sh
 # The documentation for poke settings is generated by poke itself.
 # This is to avoid replication.  The documentation of the settings
 # lives in poke/pk-settings.pk.
+#
+# Note that if we are cross-compiling we generate an empty file.  This
+# is obviously not ideal, but it is not worse than failing.
+
+if NATIVE_BUILD
 
 poke-settings.texi: $(srcdir)/poke2texi.pk $(top_srcdir)/poke/pk-settings.pk
 	$(top_builddir)/run poke -q -L $(srcdir)/poke2texi.pk --settings \
 	  > poke-settings.texi-tmp
 	mv poke-settings.texi-tmp poke-settings.texi
+
+else
+
+poke-settings.texi:
+	echo "Settings documentation not generated in cross-build." \
+          > poke-settings.texi
+
+endif
 
 # This rule generates a list of the node names from the manual.
 # It then substitutes spaces with '/' which is a kludge used to
