@@ -1,5 +1,11 @@
 2022-02-01  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* configure.ac: Define the Automake conditional CROSS_COMPILING.
+	* doc/Makefile.am (poke-settings.texi): Rule to use when
+	cross-compiling.
+
+2022-02-01  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* man/Makefile.am (poke.1): Revert last change.
 
 2022-02-01  Jose E. Marchesi  <jemarch@gnu.org>
